<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#203A43"
    tools:context=".MainActivity">

     <RelativeLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_centerInParent="true"
	  android:layout_marginLeft="40dp"
	  android:layout_marginRight="40dp">

	  <ImageView
	       android:id="@+id/imgView_logo"
	       android:layout_width="80dp"
	       android:layout_height="80dp"
	       android:adjustViewBounds="true"
	       android:background="@android:color/transparent"
	       android:scaleType="fitCenter"
	       android:src="@drawable/worker"
	       android:transitionName="trans1" />
	  <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@id/imgView_logo"
	       android:id="@+id/app_name"
	       android:text="@string/app_name"
	       android:fontFamily="sans-serif"
	       android:textSize="30dp"
	       android:textColor="@android:color/white"/>

	  <RelativeLayout
	       android:id="@+id/relative_login"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/app_name"
	       android:visibility="visible">

	       <TextView
		    android:id="@+id/tv_login"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:text="@string/login"
		    android:textColor="@android:color/white"
		    android:textSize="28dp" />

	       <LinearLayout
		    android:id="@+id/linlay1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/tv_login"
		    android:layout_marginTop="5dp"
		    android:orientation="vertical">

		    <LinearLayout
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:orientation="vertical">

			 <EditText
			      android:id="@+id/login_mail"
			      android:layout_width="match_parent"
			      android:layout_height="40dp"
			      android:layout_marginTop="5dp"
			      android:background="@android:color/transparent"
			      android:fontFamily="sans-serif-light"
			      android:hint="@string/email"
			      android:inputType="textEmailAddress"
			      android:paddingLeft="15dp"
			      android:paddingRight="15dp"
			      android:textColor="@android:color/white"
			      android:textColorHint="@android:color/white"
			      android:textSize="15sp" />

		    </LinearLayout>

		    <LinearLayout
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:layout_marginTop="5dp"
			 android:orientation="vertical">

			 <EditText
			      android:id="@+id/login_pwd"
			      android:layout_width="match_parent"
			      android:layout_height="40dp"
			      android:layout_marginTop="5dp"
			      android:background="@android:color/transparent"
			      android:fontFamily="sans-serif-light"
			      android:hint="@string/password"
			      android:inputType="textPassword"
			      android:paddingLeft="15dp"
			      android:paddingRight="15dp"
			      android:textColor="@android:color/white"
			      android:textColorHint="@android:color/white"
			      android:textSize="15sp" />

			 <CheckBox
			      android:id="@+id/show_pwd_login"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:text="Show Password"
			      android:textColor="@android:color/white"
			      android:textSize="12sp"
			      android:layout_marginLeft="10dp"/>
		    </LinearLayout>

	       </LinearLayout>

	       <Button
		    android:layout_below="@+id/linlay1"
		    android:id="@+id/login_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="15dp"
		    android:background="#FFA726"
		    android:fontFamily="sans-serif-medium"
		    android:paddingLeft="70dp"
		    android:paddingRight="70dp"
		    android:text="@string/login"
		    android:onClick="login"
		    android:textAllCaps="false"
		    android:textSize="16sp" />

	  </RelativeLayout>

     </RelativeLayout>

     <RelativeLayout
	  android:id="@+id/relative_signup"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_alignParentBottom="true"
	  android:layout_marginLeft="20dp"
	  android:layout_marginRight="20dp"
	  android:visibility="visible">

	  <Button
	       android:layout_marginLeft="10dp"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:background="@android:color/transparent"
	       android:fontFamily="sans-serif"
	       android:text="@string/signup"
	       android:textColor="@android:color/white"
	       android:onClick="signup"
	       android:textAllCaps="true" />

	  <Button
	       android:layout_width="wrap_content"
	       android:onClick="forgotpassword"
	       android:layout_height="wrap_content"
	       android:layout_alignParentRight="true"
	       android:layout_marginRight="20dp"
	       android:background="@android:color/transparent"
	       android:fontFamily="sans-serif"
	       android:text="@string/forgot_password"
	       android:textColor="@android:color/white"
	       android:textAllCaps="true" />
     </RelativeLayout>

</RelativeLayout>